--- a/air.conf.example
+++ b/air.conf.example
@@ -14,6 +14,7 @@ include_ext = ["go", "tpl", "tmpl", "html"]
 exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules"]
 delay = 800 # ms
 remove_after=false
+run_first=false
 
 [log]
 time = true
